<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sherlockScrollView"
    style="@style/RootScrollView"
    android:background="@drawable/sherlock_background">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        style="@style/RootLinearLayout"
        tools:context="com.example.android.quizapp.MainActivity">

        <TextView
            style="@style/QuestionTextView"
            android:text="@string/sherlockQuestion_1" />

        <RadioGroup
            android:id="@+id/sherlockQuestion_1_AnswersRadioGroup"
            style="@style/AnswersRadioGroupAndLinearLayout">

            <RadioButton
                android:id="@+id/sherlockQuestion_1_Answer_1_RadioButton"
                style="@style/AnswerRadioButtonAndCheckBox"
                android:text="@string/sherlockQuestion_1_Answer_1" />

            <RadioButton
                android:id="@+id/sherlockQuestion_1_Answer_2_RadioButton"
                style="@style/AnswerRadioButtonAndCheckBox"
                android:text="@string/sherlockQuestion_1_Answer_2" />

            <RadioButton
                android:id="@+id/sherlockQuestion_1_Answer_3_RadioButton"
                style="@style/AnswerRadioButtonAndCheckBox"
                android:text="@string/sherlockQuestion_1_Answer_3" />

        </RadioGroup>

        <Button
            android:id="@+id/sherlockQuestion_1_SubmitButton"
            style="@style/SubmitButton"
            android:nextFocusUp="@id/sherlockQuestion_1_AnswersRadioGroup" />

        <TextView
            style="@style/QuestionTextView"
            android:text="@string/sherlockQuestion_2" />

        <RadioGroup
            android:id="@+id/sherlockQuestion_2_AnswersRadioGroup"
            style="@style/AnswersRadioGroupAndLinearLayout">

            <RadioButton
                android:id="@+id/sherlockQuestion_2_Answer_1_RadioButton"
                style="@style/AnswerRadioButtonAndCheckBox"
                android:text="@string/sherlockQuestion_2_Answer_1" />

            <RadioButton
                android:id="@+id/sherlockQuestion_2_Answer_2_RadioButton"
                style="@style/AnswerRadioButtonAndCheckBox"
                android:text="@string/sherlockQuestion_2_Answer_2" />

            <RadioButton
                android:id="@+id/sherlockQuestion_2_Answer_3_RadioButton"
                style="@style/AnswerRadioButtonAndCheckBox"
                android:text="@string/sherlockQuestion_2_Answer_3" />

        </RadioGroup>

        <Button
            android:id="@+id/sherlockQuestion_2_SubmitButton"
            style="@style/SubmitButton"
            android:nextFocusUp="@id/sherlockQuestion_2_AnswersRadioGroup" />


        <TextView
            style="@style/QuestionTextView"
            android:text="@string/sherlockQuestion_3" />

        <RadioGroup
            android:id="@+id/sherlockQuestion_3_AnswersRadioGroup"
            style="@style/AnswersRadioGroupAndLinearLayout">

            <RadioButton
                android:id="@+id/sherlockQuestion_3_Answer_1_RadioButton"
                style="@style/AnswerRadioButtonAndCheckBox"
                android:text="@string/sherlockQuestion_3_Answer_1" />

            <RadioButton
                android:id="@+id/sherlockQuestion_3_Answer_2_RadioButton"
                style="@style/AnswerRadioButtonAndCheckBox"
                android:text="@string/sherlockQuestion_3_Answer_2" />

            <RadioButton
                android:id="@+id/sherlockQuestion_3_Answer_3_RadioButton"
                style="@style/AnswerRadioButtonAndCheckBox"
                android:text="@string/sherlockQuestion_3_Answer_3" />

        </RadioGroup>

        <Button
            android:id="@+id/sherlockQuestion_3_SubmitButton"
            style="@style/SubmitButton"
            android:nextFocusUp="@id/sherlockQuestion_3_AnswersRadioGroup" />

        <TextView
            style="@style/QuestionTextView"
            android:labelFor="@id/sherlockQuestion_4_EditText"
            android:text="@string/sherlockQuestion_4" />

        <EditText
            android:id="@+id/sherlockQuestion_4_EditText"
            style="@style/AnswerEditText" />

        <Button
            android:id="@+id/sherlockQuestion_4_SubmitButton"
            style="@style/SubmitButton"
            android:nextFocusUp="@id/sherlockQuestion_4_EditText" />

        <TextView
            style="@style/QuestionTextView"
            android:text="@string/sherlockQuestion_5" />

        <LinearLayout
            android:id="@+id/sherlockQuestion_5_LinearLayout"
            style="@style/AnswersRadioGroupAndLinearLayout">

            <CheckBox
                android:id="@+id/sherlockQuestion_5_Answer_1_CheckBox"
                style="@style/AnswerRadioButtonAndCheckBox"
                android:text="@string/sherlockQuestion_5_Answer_1" />

            <CheckBox
                android:id="@+id/sherlockQuestion_5_Answer_2_CheckBox"
                style="@style/AnswerRadioButtonAndCheckBox"
                android:text="@string/sherlockQuestion_5_Answer_2" />

            <CheckBox
                android:id="@+id/sherlockQuestion_5_Answer_3_CheckBox"
                style="@style/AnswerRadioButtonAndCheckBox"
                android:text="@string/sherlockQuestion_5_Answer_3" />

            <CheckBox
                android:id="@+id/sherlockQuestion_5_Answer_4_CheckBox"
                style="@style/AnswerRadioButtonAndCheckBox"
                android:text="@string/sherlockQuestion_5_Answer_4" />

        </LinearLayout>

        <Button
            android:id="@+id/sherlockQuestion_5_SubmitButton"
            style="@style/SubmitButton"
            android:nextFocusUp="@id/sherlockQuestion_5_LinearLayout" />

        <TextView
            style="@style/QuestionTextView"
            android:text="@string/sherlockQuestion_6" />

        <LinearLayout
            android:id="@+id/sherlockQuestion_6_LinearLayout"
            style="@style/AnswersRadioGroupAndLinearLayout">

            <CheckBox
                android:id="@+id/sherlockQuestion_6_Answer_1_CheckBox"
                style="@style/AnswerRadioButtonAndCheckBox"
                android:text="@string/sherlockQuestion_6_Answer_1" />

            <CheckBox
                android:id="@+id/sherlockQuestion_6_Answer_2_CheckBox"
                style="@style/AnswerRadioButtonAndCheckBox"
                android:text="@string/sherlockQuestion_6_Answer_2" />

            <CheckBox
                android:id="@+id/sherlockQuestion_6_Answer_3_CheckBox"
                style="@style/AnswerRadioButtonAndCheckBox"
                android:text="@string/sherlockQuestion_6_Answer_3" />

            <CheckBox
                android:id="@+id/sherlockQuestion_6_Answer_4_CheckBox"
                style="@style/AnswerRadioButtonAndCheckBox"
                android:text="@string/sherlockQuestion_6_Answer_4" />

        </LinearLayout>

        <Button
            android:id="@+id/sherlockQuestion_6_SubmitButton"
            style="@style/SubmitButton"
            android:nextFocusUp="@id/sherlockQuestion_6_LinearLayout" />

        <TextView
            style="@style/QuestionTextView"
            android:labelFor="@id/sherlockQuestion_7_EditText"
            android:text="@string/sherlockQuestion_7" />

        <EditText
            android:id="@+id/sherlockQuestion_7_EditText"
            style="@style/AnswerEditText" />

        <Button
            android:id="@+id/sherlockQuestion_7_SubmitButton"
            style="@style/SubmitButton"
            android:nextFocusUp="@id/sherlockQuestion_7_EditText" />

        <TextView
            style="@style/QuestionTextView"
            android:text="@string/sherlockQuestion_8" />

        <RadioGroup
            android:id="@+id/sherlockQuestion_8_AnswersRadioGroup"
            style="@style/AnswersRadioGroupAndLinearLayout">

            <RadioButton
                android:id="@+id/sherlockQuestion_8_Answer_1_RadioButton"
                style="@style/AnswerRadioButtonAndCheckBox"
                android:text="@string/sherlockQuestion_8_Answer_1" />

            <RadioButton
                android:id="@+id/sherlockQuestion_8_Answer_2_RadioButton"
                style="@style/AnswerRadioButtonAndCheckBox"
                android:text="@string/sherlockQuestion_8_Answer_2" />

            <RadioButton
                android:id="@+id/sherlockQuestion_8_Answer_3_RadioButton"
                style="@style/AnswerRadioButtonAndCheckBox"
                android:text="@string/sherlockQuestion_8_Answer_3" />

        </RadioGroup>

        <Button
            android:id="@+id/sherlockQuestion_8_SubmitButton"
            style="@style/SubmitButton"
            android:nextFocusUp="@id/sherlockQuestion_8_AnswersRadioGroup" />

        <TextView
            style="@style/QuestionTextView"
            android:text="@string/sherlockQuestion_9" />

        <RadioGroup
            android:id="@+id/sherlockQuestion_9_AnswersRadioGroup"
            style="@style/AnswersRadioGroupAndLinearLayout">

            <RadioButton
                android:id="@+id/sherlockQuestion_9_Answer_1_RadioButton"
                style="@style/AnswerRadioButtonAndCheckBox"
                android:text="@string/sherlockQuestion_9_Answer_1" />

            <RadioButton
                android:id="@+id/sherlockQuestion_9_Answer_2_RadioButton"
                style="@style/AnswerRadioButtonAndCheckBox"
                android:text="@string/sherlockQuestion_9_Answer_2" />

            <RadioButton
                android:id="@+id/sherlockQuestion_9_Answer_3_RadioButton"
                style="@style/AnswerRadioButtonAndCheckBox"
                android:text="@string/sherlockQuestion_9_Answer_3" />

        </RadioGroup>

        <Button
            android:id="@+id/sherlockQuestion_9_SubmitButton"
            style="@style/SubmitButton"
            android:nextFocusUp="@id/sherlockQuestion_9_AnswersRadioGroup" />

        <TextView
            style="@style/QuestionTextView"
            android:labelFor="@id/sherlockQuestion_10_EditText"
            android:text="@string/sherlockQuestion_10" />

        <EditText
            android:id="@+id/sherlockQuestion_10_EditText"
            style="@style/AnswerEditText" />

        <Button
            android:id="@+id/sherlockQuestion_10_SubmitButton"
            style="@style/SubmitButton"
            android:nextFocusUp="@id/sherlockQuestion_10_EditText" />
    </LinearLayout>
</ScrollView>